# football-forecaster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: forecast.yml
data/: elo.parquet  elo_seed.csv  fixtures.parquet  historical.parquet
docs/: index.html  prompt-pack.md
docs/api/: 2026-06-12-CAN-BIH.json  2026-06-12-USA-PAR.json  2026-06-13-AUS-TUR.json  2026-06-13-BRA-MAR.json  2026-06-13-HAI-SCO.json  2026-06-13-QAT-SUI.json  2026-06-14-CIV-ECU.json  2026-06-14-GER-CUW.json  2026-06-14-NED-JPN.json  2026-06-14-SWE-TUN.json  2026-06-15-BEL-EGY.json  2026-06-15-ESP-CPV.json  2026-06-15-IRN-NZL.json  2026-06-15-KSA-URU.json  2026-06-16-ARG-ALG.json  2026-06-16-AUT-JOR.json  2026-06-16-FRA-SEN.json  2026-06-16-IRQ-NOR.json  2026-06-17-ENG-CRO.json  2026-06-17-GHA-PAN.json  2026-06-17-POR-COD.json  2026-06-17-UZB-COL.json  2026-06-18-CAN-QAT.json  2026-06-18-CZE-RSA.json  2026-06-18-MEX-KOR.json  2026-06-18-SUI-BIH.json  2026-06-19-BRA-HAI.json  2026-06-19-SCO-MAR.json  2026-06-19-TUR-PAR.json  2026-06-19-USA-AUS.json  2026-06-20-ECU-CUW.json  2026-06-20-GER-CIV.json  2026-06-20-NED-SWE.json  2026-06-20-TUN-JPN.json  2026-06-21-BEL-IRN.json  2026-06-21-ESP-KSA.json  2026-06-21-NZL-EGY.json  2026-06-21-URU-CPV.json  2026-06-22-ARG-AUT.json  (+109 more)
forecaster/: __init__.py  __main__.py  backtest.py  cli.py  config.py  form.py  ingest.py  model.py  picks.py  publish.py  ratings.py  schema.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_form.py  test_ingest.py  test_model.py  test_picks.py  test_publish.py  test_ratings.py  test_schema.py
(+8 files in other folders)
